--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -28,6 +28,7 @@ env:
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
   ENABLE_HEARING_OUTCOMES: true
+  ENABLE_CASE_DEFENDANT_DOCUMENTS: true
   CASE_TRACKING_PRE_PILOT_USERS: All
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: true
