--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:unit": "docker exec -it -e ENABLE_HEARING_OUTCOMES=false prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit",
     "test:pact": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit",
     "test:int": "DISPLAY= docker compose -f compose/docker-compose.cypress-run.yml up --abort-on-container-exit",
-    "test:int:ui": "/usr/X11/bin/xhost + 127.0.0.1 && DISPLAY=host.docker.internal:0 docker compose -f compose/docker-compose.cypress-ui.yml up --abort-on-container-exit"
+    "test:int:ui": "/usr/X11/bin/xhost + 127.0.0.1 && DISPLAY=host.docker.internal:0 docker compose -f compose/docker-compose.cypress-ui.yml up --abort-on-container-exit",
+    "prepare": "husky"
   },
   "config": {
     "pact_do_not_track": true
@@ -89,6 +90,7 @@
     "@pact-foundation/pact": "^12.1.2",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-junit": "13.2.0",
     "jest-pact": "^0.11.0",
