--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "stop": "docker compose down",
     "build": "docker compose pull && docker compose build",
     "test": "npm run test:lint && npm run test:unit && npm run test:pact && npm run test:int",
-    "test:lint": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/standard",
+    "test:lint": "docker exec -i prepare-a-case-app /usr/src/app/node_modules/.bin/standard",
     "test:lint:fix": "npm run test:lint -- --fix",
     "test:unit": "docker exec -it -e ENABLE_HEARING_OUTCOMES=false prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit",
     "test:pact": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit",
