feat: PIC-3622 Workflow Prep Status Assign
This adds prep status for development env. It can't be merged until the backend has caught up.

In addition a fix for CI not using doker-compose default env values is included.

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -28,6 +28,7 @@ env:
   ENABLE_CASE_PROGRESS: true
   ENABLE_APP_INSIGHTS: true
   ENABLE_HEARING_OUTCOMES: true
+  ENABLE_WORKFLOW: true
   CASE_TRACKING_PRE_PILOT_USERS: All
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: true
