--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,7 @@ services:
       - HEARING_OUTCOMES_PAGE_SIZE=${HEARING_OUTCOMES_PAGE_SIZE:-2}
       - ENABLE_CASE_COMMENTS=${ENABLE_CASE_COMMENTS:-true}
       - ENABLE_CASE_PROGRESS=${ENABLE_CASE_PROGRESS:-true}
+      - ENABLE_WORKFLOW=${ENABLE_WORKFLOW:-true}
       - ENABLE_HEARING_OUTCOMES=${ENABLE_HEARING_OUTCOMES:-true}
       - ENABLE_PAST_CASES_NAVIGATION=${ENABLE_PAST_CASES_NAVIGATION:-true}
       - ENABLE_CASE_DEFENDANT_DOCUMENTS=${ENABLE_CASE_DEFENDANT_DOCUMENTS:-true}
