--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,26 +80,6 @@ jobs:
           value: "${VERSION}"
 
   test_lint_unit_pact:
-    executor: builder
-    steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run:
-          name: Build Development Image
-          command: docker build --target=ci -t prepare-a-case-app -f Dockerfile .
-      - run:
-          name: Lint Test
-          command: docker run -it prepare-a-case-app /usr/src/app/node_modules/.bin/standard
-      - run:
-          name: Unit Test
-          command: docker run -e ENABLE_HEARING_OUTCOMES=false -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit
-      #- run:
-      #    name: Pact Test
-      #    halt_build_on_fail: false
-      #    command: docker run -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit
-
-  test_integration:
     machine:
       image: ubuntu-2204:current
     resource_class: medium
@@ -119,6 +99,16 @@ jobs:
           name: Log services
           command: docker compose logs -f -t > services.log
           background: true
+      - run:
+          name: Lint Test
+          command: docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/standard
+      - run:
+          name: Unit Test
+          command: docker exec -e ENABLE_HEARING_OUTCOMES=false -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit
+      #- run:
+      #    name: Pact Test
+      #    halt_build_on_fail: false
+      #    command: docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit
       - run:
           name: Run integration tests
           command: DISPLAY=:99 docker compose -f compose/docker-compose.cypress-run.yml up --abort-on-container-exit
@@ -230,8 +220,6 @@ workflows:
     jobs:
       #- app_scan
       - test_lint_unit_pact:
-          context: [hmpps-common-vars]
-      - test_integration:
           context: [hmpps-common-vars]
       - set_app_version:
           filters:
