--- a/compose/user-auth.yml
+++ b/compose/user-auth.yml
@@ -1,4 +1,7 @@
-version: '3.1'
+version: '3.7'
+networks:
+  hmpps:
+  
 services:
 
   hmpps-auth:
@@ -10,6 +13,7 @@ services:
       - "9091:8080"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/auth/health"]
+    entrypoint: ["java", "-javaagent:/app/agent.jar", "-jar", "/app/app.jar"]
     environment:
       - SPRING_PROFILES_ACTIVE=dev
       - APPLICATION_AUTHENTICATION_UI_ALLOWLIST=0.0.0.0/0
