--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,7 @@ services:
       - ENABLE_HEARING_OUTCOMES=${ENABLE_HEARING_OUTCOMES:-true}
       - ENABLE_PAST_CASES_NAVIGATION=${ENABLE_PAST_CASES_NAVIGATION:-true}
       - ENABLE_CASE_DEFENDANT_DOCUMENTS=${ENABLE_CASE_DEFENDANT_DOCUMENTS:-true}
+      - ENABLE_MOVE_TO_RESULTED_ACTION=${ENABLE_MOVE_TO_RESULTED_ACTION:-true}
     env_file:
       - .env
     networks:
