--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -32,6 +32,7 @@ env:
   CASE_TRACKING_PRE_PILOT_USERS: All
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: true
+  ENABLE_MOVE_TO_RESULTED_ACTION: true
 
 whitelist:
   dac: "194.75.245.154"
