--- a/compose/court-case-service.yml
+++ b/compose/court-case-service.yml
@@ -5,7 +5,7 @@ networks:
 services:
 
   court-case-service:
-    image: docker.io/mojdigitalstudio/court-case-service:latest
+    image: quay.io/hmpps/court-case-service:2024-03-28.35760
     container_name: court-case-service
     networks:
       - hmpps
@@ -39,6 +39,8 @@ services:
     command: ["postgres", "-c", "log_statement=all", "-c", "log_destination=stderr"]
     volumes:
       - court-case-service-db:/var/lib/postgresql/data/
+    ports:
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U appuser"]
       interval: 10s
