--- a/package.json
+++ b/package.json
@@ -56,18 +56,13 @@
     "@ministryofjustice/frontend": "^2.1.0",
     "@splidejs/splide": "^4.1.4",
     "accessible-autocomplete": "^2.0.4",
-    "agentkeepalive": "^4.2.1",
     "applicationinsights": "2.9.2",
-    "applicationinsights-native-metrics": "0.0.10",
     "axios": "1.1.0",
     "bootstrap": "^5.3.2",
-    "bunyan": "1.8.15",
-    "bunyan-format": "0.2.1",
     "compression": "1.7.4",
     "connect-redis": "6.1.3",
     "cookie-parser": "1.4.6",
     "cookie-session": "2.0.0",
-    "debug": "4.3.4",
     "dotenv": "16.0.0",
     "express": "4.18.1",
     "express-http-proxy": "^2.0.0",
@@ -81,8 +76,7 @@
     "nunjucks": "^3.2.4",
     "passport": "^0.7.0",
     "passport-oauth2": "^1.7.0",
-    "redis": "3.1.2",
-    "superagent": "7.1.3"
+    "redis": "3.1.2"
   },
   "devDependencies": {
     "@pact-foundation/pact": "^12.1.2",
