--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -32,7 +32,7 @@ env:
   CASE_TRACKING_PRE_PILOT_USERS: ZAP37S,BEVERLEYWILLMOTTNPS,ZRX14Y,wyi97r,mdy87w,sarahclarkenps,bethanylilleynps,jenniferrawlingsnps,maxholgatenps,wjf65j,xzu68s,CZE89A,serenacannannps,qgd46q,santoshchakrabartnps
   CASE_SEARCH_USERS: all
   ENABLE_SERVERSIDE_PAGING: true
-  ENABLE_MOVE_TO_RESULTED_ACTION: false
+  ENABLE_MOVE_TO_RESULTED_ACTION: true
 
 whitelist:
   office: "217.33.148.210/32"
