--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -43,8 +43,25 @@ whitelist:
   cloudplatform-live1-3: "35.177.252.54/32"
   ark-internet-1: "194.33.192.0/25"
   ark-internet-2: "194.33.196.0/25"
-  moj-official-aws-prod: "51.149.250.0/24"
   global-protect: "35.176.93.186/32"
+  dom1-ark-1: 195.59.75.0/24
+  dom1-ark-2: 194.33.192.0/25
+  dom1-ark-3: 194.33.193.0/25
+  dom1-ark-4: 194.33.196.0/25
+  dom1-ark-5: 194.33.197.0/25
+  vodafone-dia-1: 194.33.200.0/21
+  vodafone-dia-2: 194.33.216.0/24
+  vodafone-dia-3: 194.33.217.0/24
+  vodafone-dia-4: 194.33.218.0/24
+  moj-official-prod: 51.149.250.0/24
+  moj-official-ark-c-expo-e: 51.149.249.0/29
+  moj-official-ark-c-vodafone: 194.33.248.0/29
+  moj-official-ark-f-vodafone: 194.33.249.0/29
+  moj-official-ark-f-expo-e: 51.149.249.32/29
+  moj-official-azure-landing-zone-public-egress-1: 20.49.214.199/32
+  moj-official-azure-landing-zone-public-egress-2: 20.49.214.228/32
+  moj-official-azure-landing-zone-public-egress-3: 20.26.11.71/32
+  moj-official-azure-landing-zone-public-egress-4: 20.26.11.108/32
 
 resources:
   cpu:
