Fix: Review comments on naming

--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -47,9 +47,9 @@ whitelist:
   moj-official-prod: 51.149.250.0/24
   moj-official-ark-c-expo-e: 51.149.249.0/29
   moj-official-ark-f-expo-e: 51.149.249.32/29
-  prp-dia-sites-1: 194.33.200.0/21 
-  prp-dia-sites-2: 194.33.216.0/23 
-  prp-dia-sites-3: 194.33.218.0/24
+  vodafone-dia-1: 194.33.200.0/21
+  vodafone-dia-2: 194.33.216.0/24
+  vodafone-dia-4: 194.33.218.0/24
   palo-alto-prisma: 128.77.75.64/26
 
 resources:
