--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -33,6 +33,7 @@ env:
   CASE_SEARCH_USERS: all
   ENABLE_MOVE_TO_RESULTED_ACTION: true
   ENABLE_WORKFLOW: true
+  DEFAULT_TIMEOUT: 12500
 
 whitelist:
   office: "217.33.148.210/32"
