--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -33,6 +33,7 @@ env:
   CASE_SEARCH_USERS: all
   ENABLE_MOVE_TO_RESULTED_ACTION: true
   DEFAULT_TIMEOUT: 12500
+  ENABLE_MATCHER_LOGGING: true
 
 whitelist:
   dac: "194.75.245.154"
