--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -33,6 +33,7 @@ env:
   ENABLE_MOVE_TO_RESULTED_ACTION: true
   ENABLE_WORKFLOW: true
   DEFAULT_TIMEOUT: 12500
+  ENABLE_MATCHER_LOGGING: true
 
 whitelist:
   office: "217.33.148.210/32"
