🧱 Add Feature Flag

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -34,6 +34,7 @@ env:
   ENABLE_MOVE_TO_RESULTED_ACTION: true
   DEFAULT_TIMEOUT: 12500
   ENABLE_MATCHER_LOGGING: true
+  ENABLE_CLICK_ANALYTICS: true
 
 whitelist:
   dac: "194.75.245.154"
