--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -34,6 +34,7 @@ env:
   ENABLE_WORKFLOW: true
   DEFAULT_TIMEOUT: 12500
   ENABLE_MATCHER_LOGGING: true
+  ENABLE_CLICK_ANALYTICS: true
 
 whitelist:
   office: "217.33.148.210/32"
