--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -35,6 +35,7 @@ env:
   ENABLE_WORKFLOW: true
   DEFAULT_TIMEOUT: 12500
   ENABLE_MATCHER_LOGGING: false
+  ENABLE_CLICK_ANALYTICS: false
 
 whitelist:
   office: "217.33.148.210/32"
