--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "usePathForSuiteName": true
   },
   "dependencies": {
+    "@microsoft/applicationinsights-web": "^3.3.2",
     "@ministryofjustice/frontend": "^2.1.0",
     "@splidejs/splide": "^4.1.4",
     "accessible-autocomplete": "^2.0.4",
