--- a/compose/court-case-service.yml
+++ b/compose/court-case-service.yml
@@ -46,7 +46,7 @@ services:
       retries: 5
 
   prison-api:
-    image: quay.io/hmpps/prison-api:latest
+    image: ghcr.io/ministryofjustice/prison-api:latest
     networks:
       - hmpps
     container_name: prison-api
