--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,16 @@ orbs:
   helm: circleci/helm@1.2.0
   kubernetes: circleci/kubernetes@1.3.0
   mem: circleci/rememborb@0.0.2
+  hmpps: ministryofjustice/hmpps@11
+
+parameters:
+  alerts-slack-channel:
+    type: string
+    default: probation_in_court_dev
+
+  node-version:
+    type: string
+    default: 20.17.0-browsers
 
 jobs:
   set_app_version:
