--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,3 +241,42 @@ workflows:
             - hmpps-common-vars
           requires:
             - request-prod-approval
+  security:
+    triggers:
+      - schedule:
+          cron: "11 16 * * 1-5"
+          # filters:
+          #   branches:
+          #     only:
+          #       - main
+    jobs:
+      # - check_outdated:
+      #     context:
+      #       - hmpps-common-vars
+      # - hmpps/npm_security_audit:
+      #     slack_channel: << pipeline.parameters.alerts-slack-channel >>
+      #     context:
+      #       - hmpps-common-vars
+      - hmpps/trivy_latest_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - hmpps-common-vars
+      # - hmpps/veracode_pipeline_scan:
+      #     slack_channel: << pipeline.parameters.alerts-slack-channel >>
+      #     context:
+      #       - veracode-credentials
+      #       - hmpps-common-vars
+  # security-weekly:
+  #   triggers:
+  #     - schedule:
+  #         cron: "0 5 * * 1"
+  #         filters:
+  #           branches:
+  #             only:
+  #               - main
+  #   jobs:
+  #     - hmpps/veracode_policy_scan:
+  #         slack_channel: << pipeline.parameters.alerts-slack-channel >>
+  #         context:
+  #           - veracode-credentials
+  #           - hmpps-common-vars
