--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,6 +202,10 @@ workflows:
     jobs:
       - test_lint_unit_pact:
           context: [hmpps-common-vars]
+      - hmpps/trivy_latest_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - hmpps-common-vars
       - set_app_version:
           filters:
             branches:
@@ -244,11 +248,11 @@ workflows:
   security:
     triggers:
       - schedule:
-          cron: "30 16 * * 1-5"
+          cron: "30 5 * * 1-5"
           filters:
             branches:
               only:
-                - PIC-4652/fix-security-vulnerabilities
+                - main
     jobs:
       # - check_outdated:
       #     context:
