--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,6 +220,11 @@ workflows:
           slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
             - hmpps-common-vars
+      - hmpps/veracode_pipeline_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - veracode-credentials
+            - hmpps-common-vars
       - deploy_dev:
           context:
             - hmpps-common-vars
