--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,10 +266,10 @@ workflows:
       # - check_outdated:
       #     context:
       #       - hmpps-common-vars
-      # - hmpps/npm_security_audit:
-      #     slack_channel: << pipeline.parameters.alerts-slack-channel >>
-      #     context:
-      #       - hmpps-common-vars
+      - hmpps/npm_security_audit:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - hmpps-common-vars
       - hmpps/trivy_latest_scan:
           slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
