--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "superagent": "7.1.3"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^12.1.2",
+    "@pact-foundation/pact": "15.0.1",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
     "jest": "^29.7.0",
