running veracode policy  scan (wip)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,6 +279,11 @@ workflows:
           context:
             - veracode-credentials
             - hmpps-common-vars
+      - hmpps/veracode_policy_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - veracode-credentials
+            - hmpps-common-vars
   # security-weekly:
   #   triggers:
   #     - schedule:
