--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ orbs:
   kubernetes: circleci/kubernetes@1.3.0
   mem: circleci/rememborb@0.0.2
   hmpps: ministryofjustice/hmpps@11
+  slack: circleci/slack@4.10.1
 
 parameters:
   alerts-slack-channel:
