--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,15 @@ workflows:
           main: true
           requires:
             - set_app_version
-      - hmpps/veracode_policy_scan:
+      - hmpps/npm_security_audit:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - hmpps-common-vars
+      - hmpps/trivy_latest_scan:
+          slack_channel: << pipeline.parameters.alerts-slack-channel >>
+          context:
+            - hmpps-common-vars
+      - hmpps/veracode_pipeline_scan:
           slack_channel: << pipeline.parameters.alerts-slack-channel >>
           context:
             - veracode-credentials
