--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,17 @@ networks:
 
 services:
   hmpps-auth:
-    image: wiremock/wiremock:3.3.1
-    container_name: hmpps-auth
+    image: quay.io/hmpps/hmpps-auth:latest
     networks:
       - hmpps
-    volumes:
-      - ./wiremock/mappings/hmpps-auth:/home/wiremock/mappings
-    entrypoint: ["/docker-entrypoint.sh", "--disable-request-logging", "--disable-banner", "--global-response-templating"] #"--verbose"
-    restart: always
+    container_name: hmpps-auth
     ports:
       - "9091:8080"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/auth/health" ]
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+      - APPLICATION_AUTHENTICATION_UI_ALLOWLIST=0.0.0.0/0
 
   hmpps-user-preferences:
     build: hmpps-user-preferences
