--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "start": "docker compose up",
     "start:detached": "npm run start -- --wait -d",
+    "start:test": "dotenv -e feature.env -- npm start",
     "stop": "docker compose down",
     "build": "docker compose pull && docker compose build",
     "test": "npm run test:lint && npm run test:unit && npm run test:pact && npm run test:int",
@@ -21,7 +22,9 @@
     "test:pact": "docker exec -it prepare-a-case-app /app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit",
     "test:int": "DISPLAY= docker compose -f compose/docker-compose.cypress-run.yml up --abort-on-container-exit",
     "test:int:ui": "/usr/X11/bin/xhost + 127.0.0.1 && DISPLAY=host.docker.internal:0 docker compose -f compose/docker-compose.cypress-ui.yml up --abort-on-container-exit",
-    "security_audit": "npx audit-ci --config audit-ci.json"
+    "security_audit": "npx audit-ci --config audit-ci.json",
+    "int-test": "cypress run --config video=false",
+    "int-test-ui": "npx cypress open --config-file integration-tests/cypress/cypress.config.js --e2e --browser chrome"
   },
   "config": {
     "pact_do_not_track": true
@@ -92,6 +95,8 @@
     "@pact-foundation/pact": "15.0.1",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
+    "cypress": "^14.4.1",
+    "dotenv-cli": "^8.0.0",
     "jest": "^29.7.0",
     "jest-junit": "13.2.0",
     "jest-pact": "^0.11.0",
