--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "2.9.2",
     "applicationinsights-native-metrics": "0.0.10",
+    "axe-core": "^4.10.3",
     "axios": "1.9.0",
     "bootstrap": "^5.3.2",
     "bunyan": "1.8.15",
