--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - ./pact:/app/pact
       - ./schemas:/app/schemas
       - ./wiremock:/app/wiremock
-      - ./integration-tests:/app/integrations-tests
+      - ./integration-tests:/app/integration-tests
     environment:
       - REDIS_HOST=redis
       - PORT=3000
