--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,29 +95,36 @@ jobs:
           command: Xvfb :99 || true
           background: true
       - run:
+          name: Start Wiremock
+          command: docker compose -f docker-compose-test.yml up -d --wait
+      - run:
           name: Start services
-          command: docker compose up -d --wait
+          command: npx dotenv -e feature.env -- docker compose up -d --wait
       - run:
           name: Log services
           command: docker compose logs -f -t > services.log
           background: true
+      - run:
+          name: Wait for node app to start
+          command: sleep 5
       - run:
           name: Lint Test
           command: docker exec -it prepare-a-case-app /app/node_modules/.bin/standard
       - run:
           name: Unit Test
           command: docker exec -e ENABLE_HEARING_OUTCOMES=false -it prepare-a-case-app /app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit
-      #- run:
-      #    name: Pact Test
-      #    halt_build_on_fail: false
-      #    command: docker exec -it prepare-a-case-app /app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit
       - run:
           name: Run integration tests
-          command: DISPLAY=:99 docker compose -f compose/docker-compose.cypress-run.yml up --abort-on-container-exit
+          command: >
+            npx cypress run
+            --config-file integration-tests/cypress/cypress.config.js --e2e --browser chrome
+          environment:
+            DISPLAY: :99
       - store_artifacts:
           path: integration-tests/output
       - store_artifacts:    
           path: services.log
+
   pact_push:
     environment:
       PACT_BROKER_DISABLE_SSL_VERIFICATION: "true"
@@ -138,6 +145,7 @@ jobs:
       - run:
           name: Upload pact files to broker
           command: docker run -it prepare-a-case-app /app/node_modules/.bin/pact-broker publish pact/pacts --broker-base-url $PACT_BROKER_BASE_URL --consumer-app-version $CIRCLE_SHA1 --tag $CIRCLE_BRANCH -u $PACT_BROKER_USERNAME -p $PACT_BROKER_PASSWORD"
+
   build:
     executor: deployer
     parameters:
@@ -175,16 +183,19 @@ jobs:
                   docker tag hmpps/prepare-a-case:$APP_VERSION quay.io/hmpps/prepare-a-case:latest
                   docker push quay.io/hmpps/prepare-a-case:$APP_VERSION
                   docker push quay.io/hmpps/prepare-a-case:latest
+
   deploy_dev:
     executor: deployer
     steps:
       - deploy_to_live_env:
           env: "dev"
+
   deploy_preprod:
     executor: deployer
     steps:
       - deploy_to_live_env:
           env: "preprod"
+
   deploy_prod:
     executor: deployer
     steps:
@@ -237,6 +248,7 @@ workflows:
             - hmpps-common-vars
           requires:
             - request-prod-approval
+
   security:
     triggers:
       - schedule:
@@ -259,6 +271,7 @@ workflows:
           context:
             - veracode-credentials
             - hmpps-common-vars
+
   security-weekly:
     triggers:
       - schedule:
