--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,12 +94,18 @@ jobs:
           name: Start X11 virtual framebuffer server (if not running)
           command: Xvfb :99 || true
           background: true
+      # - run:
+      #     name: Start Wiremock
+      #     command: docker compose -f docker-compose-test.yml up -d --wait
       - run:
-          name: Start Wiremock
-          command: docker compose -f docker-compose-test.yml up -d --wait
+          name: Get wiremock
+          command: curl -o wiremock.jar https://repo1.maven.org/maven2/org/wiremock/wiremock-standalone/3.9.1/wiremock-standalone-3.9.1.jar
+      - run:
+          name: Install Dependencies
+          command: npm ci --no-audit
       - run:
           name: Start services
-          command: npx dotenv -e feature.env -- docker compose up -d --wait
+          command: npx dotenv-cli -e feature.env -- docker compose up -d --wait
       - run:
           name: Log services
           command: docker compose logs -f -t > services.log
