--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,16 +95,6 @@ jobs:
           command: Xvfb :99 || true
           background: true
       - run:
-          name: Start Wiremock
-          command: docker compose -f docker-compose-test.yml up -d --wait
-      # - run:
-      #     name: Get wiremock
-      #     command: curl -o wiremock.jar https://repo1.maven.org/maven2/org/wiremock/wiremock-standalone/3.9.1/wiremock-standalone-3.9.1.jar
-      # - run:
-      #     name: Run wiremock
-      #     command: java -jar wiremock.jar --port 9091
-      #     background: true
-      - run:
           name: Install Dependencies
           command: npm ci --no-audit
       - run:
@@ -114,7 +104,7 @@ jobs:
             npm ci --no-audit
       - run:
           name: Start services
-          command: npx dotenv-cli -e feature.env -- docker compose up -d --wait
+          command: npx dotenv-cli -e feature.env -- docker compose -f docker-compose.yml -f docker-compose-test.yml up -d --wait
       - run:
           name: Log services
           command: docker compose logs -f -t > services.log
