--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -2,15 +2,15 @@ version: '3.7'
 services:
 
   hmpps-auth:
-    image: wiremock/wiremock
+    image: wiremock/wiremock:3.3.1
     networks:
       - hmpps
     container_name: wiremock
     restart: always
     ports:
       - "9091:8080"
-    command: "--global-response-templating --verbose"
-    # entrypoint: ["/docker-entrypoint.sh", "--disable-request-logging", "--disable-banner", "--global-response-templating"] #"--verbose"
+    # command: "--global-response-templating --verbose"
+    entrypoint: ["/docker-entrypoint.sh", "--disable-request-logging", "--disable-banner", "--global-response-templating"] #"--verbose"
 
 networks:
   hmpps:
