--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,14 +104,14 @@ jobs:
             npm ci --no-audit
       - run:
           name: Start services
-          command: npx dotenv-cli -e feature.env -- docker compose -f docker-compose.yml -f docker-compose-test.yml up -d --wait
+          command: docker compose up -d --wait
       - run:
           name: Log services
           command: docker compose logs -f -t > services.log
           background: true
-      - run:
-          name: Wait for node app to start
-          command: sleep 5
+      # - run:
+      #     name: Wait for node app to start
+      #     command: sleep 5
       - run:
           name: Lint Test
           command: docker exec -it prepare-a-case-app /app/node_modules/.bin/standard
