--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,9 +94,9 @@ jobs:
           name: Start X11 virtual framebuffer server (if not running)
           command: Xvfb :99 || true
           background: true
-      - run:
-          name: Install Dependencies
-          command: npm ci --no-audit
+      # - run:
+      #     name: Install Dependencies
+      #     command: npm ci --no-audit
       - run:
           name: Install Test Dependencies
           command: |
@@ -104,7 +104,7 @@ jobs:
             npm ci --no-audit
       - run:
           name: Start services
-          command: docker compose up -d --wait
+          command: npx dotenv-cli -e feature.env -- docker compose up -d --wait
       - run:
           name: Log services
           command: docker compose logs -f -t > services.log
@@ -122,7 +122,7 @@ jobs:
           name: Run integration tests
           command: >
             npx cypress run
-            --config-file integration-tests/cypress/cypress.config.js --e2e --browser chrome
+            --config-file integration-tests/cypress/cypress.config.js video=false
           environment:
             DISPLAY: :99
       - store_artifacts:
