--- a/feature.env
+++ b/feature.env
@@ -1,23 +1,3 @@
 REDIS_ENABLED=false
-PORT=3000
-PAC_ENV=dev
-NODE_ENV=development
-ENABLE_APP_INSIGHTS=false
-API_CLIENT_ID=prepare-a-case-for-court
-API_CLIENT_SECRET=clientsecret
-APP_VERSION=dev-build
-NOMIS_AUTH_URL=http://localhost:9091/auth
+NOMIS_AUTH_URL=http://host.docker.internal:9091/auth
 NOMIS_AUTH_URL_REDIRECT=http://localhost:9091/auth
-NOMIS_DISABLE_OAUTH_STATE=true
-REDUCE_STDOUT_NOISE=true
-USER_PREFERENCE_SERVICE_URL=http://hmpps-user-preferences:3000
-COURT_CASE_SERVICE_URL=http://court-case-service:8080
-NOTIFICATION_USERNAME=test 
-NOTIFICATION_PASSWORD=test 
-HEARING_OUTCOMES_PAGE_SIZE=2
-ENABLE_CASE_COMMENTS=true
-ENABLE_CASE_PROGRESS=true
-ENABLE_WORKFLOW=true
-ENABLE_HEARING_OUTCOMES=true
-ENABLE_PAST_CASES_NAVIGATION=true
-ENABLE_MOVE_TO_RESULTED_ACTION=true
